# AdventOfCode

./: .envrc  .gitignore  README.md  grab-inputs  grabInputs  grabinput.sh
2022/: README.md
2022/haskell/day02/: Project.toml  flake.nix
2022/haskell/day09/: day09.cabal
2022/haskell/day14/: day14.cabal
2022/haskell/day14/src/: Main.hs
2022/julia/day01/: day1b.jl
2022/julia/day07/: Project.toml
2022/julia/day18/: Main.jl
2022/julia/day19/: Main.jl
2022/zig/: build.zig  util.zig
2022/zig/day01/: main.zig
2023/: README.md
2023/zig/: build.zig  util.zig
day02/: Manifest.toml
day03/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
day03/src/: Main.hs
day04/src/: day4.jl
day05/src/: day5.jl
day06/: day06.cabal  flake.nix
day06/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
day06/src/: Main.hs
day07/: day07.jl
day08/: day08.cabal
day08/src/: Main.hs  Main.jl
day09/src/: Main.hs
day1/: day1.jl
day10/: day10.cabal
day10/src/: Main.jl
day12/src/: Main.jl
day13/: day13.cabal
day13/src/: Main.hs
day18/: Main.jl
day19/: Main.jl
day2/: aoc2.cabal
day2/src/: Main.hs  day2b.jl
day21/: day21.cabal  result
day21/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
day21/src/: Main.hs  input
day3/: aoc3.cabal  day3.jl
day3/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
day5/: Project.toml
day5/src/: day4.jl
(+39 files in other folders)
