cabal-version:      2.4
name:               day14
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joshua Niemelä
maintainer:         josh@jniemela.dk

-- A copyright notice.
-- copyright:
-- category:

library
    exposed-modules:  Main

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                 ,    text
                 ,    megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                 ,    text
                 ,    megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010
